# tabby

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  WindowsBuild.bat  WindowsCudaBuild.bat  WindowsDebugBuild.bat  auto-build.bat  auto-build.ps1  build-all-auto.bat  build-automation.bat  build-master.ps1  build.bat  build.ps1  cmake-build.bat  cmake-build.ps1  cmake.bat  docker-build.sh  docker-compose.yml  make.bat  ninja-build.bat  ninja-team.bat  ninja.bat  run-tabby.bat  run.ps1  scheduled-builds.ps1  start-all-builds.bat  start-tabby.bat  tabby-builder.bat
.cmake/: FindROCm.cmake
automation/: auto-run.ps1
clients/tabby-threads/: package.json
clients/vscode/: package.json
docker/: Dockerfile  tmp.Dockerfile
scripts/: Untitled-1.txt  build_cmake.ps1  build_cmake.sh  direct-ninja-build.ps1  install-cmake.ps1  install-ninja.ps1  make.ps1  pwsh_parallel_build.ps1  run-ninja-team.ps1  setup-windows-env.ps1  verify_cmake_ninja.ps1  verify_cmake_ninja.sh  verify_tools.ps1
